# test-task-fastapi

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  TASK.md  alembic-entrypoint.sh  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2023_12_08_1852-6e5eb88d7734_init.py
src/api/: metric.py
src/core/: database.py
src/models/: __init__.py  service.py
src/schemas/: metric.py
src/services/: metric_service.py
