[tool.poetry]
name = "test-task-fastapi"
version = "0.1.0"
description = "Service for collecting service performance metrics"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.0"
asyncpg = "^0.29.0"
fastapi = "^0.101.1"
pydantic = "^2.5.2"
SQLAlchemy = "^2.0.23"
uvicorn = "0.24.0"
uvloop = "^0.19.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
